--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
     <h3>Newsletter</h3>
     <p>Sign up to our newsletter to recieve awesome news about fresh air.</p>
     <form action="">
-        <input type="text" name="" id="">
+        <input type="text" name="" id="email">
         <button type="submit">Subscribe</button>
+        <input type="checkbox" id="terms">
+        <label for="terms">I accept the terms and conditions</label>
+        </form>
     </form>    
     </div>
+    <h3>Következő fejezet</h3>
     </div>
 </body>
 </html>
