--- a/index.html
+++ b/index.html
@@ -20,11 +20,16 @@
         <input type="text" name="" id="email">
         <button type="submit">Subscribe</button>
         <input type="checkbox" id="terms">
-        <label for="terms">I accept the terms and conditions</label>
+        <label for="terms">I accept the <a href="http://" target="_blank">terms and conditions</a></label>
         </form>
-    </form>    
+<div id="closex">
+    x
+</div>
     </div>
     <h3>Következő fejezet</h3>
+    <div id="questionmark">
+        ?
+    </div>
     </div>
 </body>
 </html>
